--- a/docker/Dockerfile-debug
+++ b/docker/Dockerfile-debug
@@ -1,10 +1,17 @@
-FROM af.flyeralarm/base-docker-dev/php/8.3/fpm-xdebug:latest
+FROM php:8.4-cli
 
-RUN apk update
-RUN apk add make
+RUN apt-get update && apt-get install -y \
+    make \
+    libcurl4-openssl-dev \
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug \
+    && docker-php-ext-install curl \
+    && rm -rf /var/lib/apt/lists/*
+
+#RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 ADD . /app
 WORKDIR /app
 
-RUN composer install -d /app
-RUN composer dump-autoload -o -d /app
+#RUN composer install --no-dev --optimize-autoloader --prefer-dist -d /app
+#RUN composer dump-autoload -o -d /app
